--- a/assets/scss/navbar/navbar.scss
+++ b/assets/scss/navbar/navbar.scss
@@ -1,8 +1,12 @@
 .hamburger {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
+
+  @include max(992px) {
+    display: flex;
+  }
   .hamburger-menu {
     cursor: pointer;
     padding: 10px;
